--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,14 @@
             <version>2023.1.28</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/systems.manifold/manifold-ext-rt -->
+        <dependency>
+            <groupId>systems.manifold</groupId>
+            <artifactId>manifold-ext-rt</artifactId>
+            <version>2023.1.28</version>
+            <scope>compile</scope>
+        </dependency>
+
 
     </dependencies>
 
@@ -84,6 +92,13 @@
                     <encoding>UTF-8</encoding>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <annotationProcessorPaths>
+                        <annotationProcessorPath>
+                            <groupId>systems.manifold</groupId>
+                            <artifactId>manifold-ext</artifactId>
+                            <version>2023.1.28</version>
+                        </annotationProcessorPath>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
             <plugin>
